# RustNicknameGenerator

./: .gitignore  Cargo.toml  Prefixes.txt  README.md  Sufixes.txt  main.rs
