[package]
name = "RustFirst"
version = "0.1.0"
authors = ["Kekiante <55111245+f4cund0x@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[[bin]]
name = "RustFirst"
path = "main.rs"
